--- a/packages/vue-demo1/package.json
+++ b/packages/vue-demo1/package.json
@@ -1,5 +1,8 @@
 {
   "name": "vue-demo1",
   "private": true,
-  "version": "0.0.0"
+  "version": "0.0.0",
+  "devDependencies": {
+    "unocss": "^0.50.0"
+  }
 }
