--- a/packages/what-time/package.json
+++ b/packages/what-time/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@types/node": "^18.14.0",
     "@vue/tsconfig": "^0.1.3",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "unplugin-vue-components": "^0.24.0"
   }
 }
