--- a/packages/what-time/package.json
+++ b/packages/what-time/package.json
@@ -6,6 +6,7 @@
     "@types/node": "^18.14.0",
     "@vue/tsconfig": "^0.1.3",
     "npm-run-all": "^4.1.5",
+    "unplugin-auto-import": "^0.15.0",
     "unplugin-vue-components": "^0.24.0"
   }
 }
