--- a/packages/what-time/package.json
+++ b/packages/what-time/package.json
@@ -3,13 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "devDependencies": {
+    "@antfu/eslint-config": "^0.35.2",
     "@iconify-json/carbon": "^1.1.16",
     "@types/node": "^18.14.0",
     "@unocss/reset": "^0.50.1",
     "@vue/tsconfig": "^0.1.3",
+    "eslint": "^8.34.0",
     "npm-run-all": "^4.1.5",
     "unocss": "^0.50.0",
     "unplugin-auto-import": "^0.15.0",
     "unplugin-vue-components": "^0.24.0"
+  },
+  "eslintConfig": {
+    "extends": "@antfu"
   }
 }
