--- a/packages/what-time/package.json
+++ b/packages/what-time/package.json
@@ -3,19 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "date-fns": "^2.29.3",
     "fuse.js": "^6.6.2",
     "timezones.json": "^1.6.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.35.2",
     "@iconify-json/carbon": "^1.1.16",
+    "@iconify-json/ri": "^1.1.5",
     "@types/node": "^18.14.0",
     "@unocss/reset": "^0.50.1",
     "@vue/tsconfig": "^0.1.3",
+    "@vueuse/core": "^9.13.0",
     "eslint": "^8.34.0",
     "npm-run-all": "^4.1.5",
     "unocss": "^0.50.0",
-    "unplugin-auto-import": "^0.15.0",
+    "unplugin-auto-import": "0.8.7",
     "unplugin-vue-components": "^0.24.0"
   },
   "eslintConfig": {
