--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev:vue-demo1": "vite packages/vue-demo1",
     "dev:vue-demo2": "vite packages/vue-demo2",
-    "dev:what-time": "vite packages/what-time"
+    "dev:what-time": "vite packages/what-time",
+    "build:what-time": "vite build packages/what-time",
+    "preview:what-time": "vite preview --port 4001 packages/what-time"
   },
   "keywords": [
     "monorepo"
