--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The demo of monorepo",
   "private": true,
   "scripts": {
-    "dev:vue-demo1": "vite packages/vue-demo1",
+    "dev:vue-demo1": "pnpm -F vue-demo1 dev",
     "dev:vue-demo2": "vite packages/vue-demo2",
     "dev:what-time": "vite packages/what-time",
     "build:what-time": "vite build packages/what-time",
