--- a/packages/what-time/package.json
+++ b/packages/what-time/package.json
@@ -13,13 +13,14 @@
     "@iconify-json/ri": "^1.1.5",
     "@types/node": "^18.14.0",
     "@unocss/reset": "^0.50.1",
+    "@vue/runtime-core": "^3.2.47",
     "@vue/tsconfig": "^0.1.3",
     "@vueuse/core": "^9.13.0",
     "eslint": "^8.34.0",
     "npm-run-all": "^4.1.5",
     "unocss": "^0.50.0",
     "unplugin-auto-import": "0.8.7",
-    "unplugin-vue-components": "^0.24.0"
+    "unplugin-vue-components": "0.19.6"
   },
   "eslintConfig": {
     "extends": "@antfu"
