--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev:vue-demo2": "vite packages/vue-demo2",
     "dev:what-time": "vite packages/what-time",
     "build:what-time": "vite build packages/what-time",
-    "preview:what-time": "vite preview --port 4001 packages/what-time"
+    "preview:what-time": "vite preview --port 4001 packages/what-time",
+    "build:unbuild": "pnpm -F unbuild-demo build"
   },
   "keywords": [
     "monorepo"
