--- a/packages/rollup-demo/package.json
+++ b/packages/rollup-demo/package.json
@@ -10,11 +10,11 @@
   "dependencies": {
     "@babel/core": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.2",
     "jsdoc": "^4.0.2",
     "open": "^9.1.0",
-    "rollup": "^3.20.2",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0"
+    "rollup": "^3.20.2"
   }
 }
