feat: add extends

--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "dev:what-time": "vite packages/what-time",
     "build:what-time": "vite build packages/what-time",
     "preview:what-time": "vite preview --port 4001 packages/what-time",
-    "build:unbuild": "pnpm -F unbuild-demo build",
-    "dev:rollup": "pnpm -F rollup-demo dev",
-    "docs:rollup": "pnpm -F rollup-demo docs"
+    "build:unbuild-demo": "pnpm -F unbuild-demo build",
+    "dev:rollup-demo": "pnpm -F rollup-demo dev",
+    "docs:rollup-demo": "pnpm -F rollup-demo docs",
+    "dev:rollup-demo-ts": "pnpm -F rollup-demo-ts dev",
+    "build:rollup-demo-ts": "pnpm -F rollup-demo-ts build"
   },
   "keywords": [
     "monorepo"
