--- a/packages/rollup-demo-ts/package.json
+++ b/packages/rollup-demo-ts/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "rollup-demo",
+  "name": "rollup-demo-ts",
   "version": "1.0.0",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "rollup -c -w",
-    "docs": "jsdoc dist/main.es.js && node server.js"
+    "build": "rollup -c"
   },
   "dependencies": {
     "@babel/core": "^7.21.4",
-    "@babel/preset-env": "^7.21.4",
+    "@rollup/plugin-alias": "^5.0.0",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-node-resolve": "^15.0.2",
-    "jsdoc": "^4.0.2",
-    "open": "^9.1.0",
+    "esbuild": "^0.17.16",
     "rollup": "^3.20.2",
-    "tslib": "^2.5.0"
+    "rollup-plugin-dts": "^5.3.0",
+    "rollup-plugin-esbuild": "^5.0.0",
+    "rollup-plugin-typescript2": "^0.34.1",
+    "tslib": "^2.5.0",
+    "typescript": "^4.9.3"
   }
 }
